# tq42sdk

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  build_and_install.sh  pyproject.toml  tetra_opt_channels_test.py
.github/workflows/: ci-cd.yml
docs/: requirements.txt
docs/source/: Help Center.md  Help_Center.md  Quick Start.md  Quick_Start.md  README.md  conf.py  index.rst  modules.rst  tq42.rst  tq42.tests.rst  tq42.utils.rst
docs/source/CLI_Developer_Guide/: Command_Structure.md  Create_and_list_Datasets.md  Errors.md  Help.md  Introduction.md  Preparing_Your_Data_and_Hyper_Parameters.md  Selecting_Compute_Resources.md  Setting_Up_Your_Environment.md  Submitting_and_Monitoring_a_Run.md  Working_with_Datasets.md  Working_with_Models.md  main.py
docs/source/CVAOpt_Algorithm/: Introduction.md  Output_Format.md  Parameters_and_Hyperparameters.md
docs/source/Dataset_creation/: Dataset_creation.md
docs/source/Evaluating_Circuits_on_Native_QPU_Providers/: Introduction.md  Parameters_and_Hyperparameters.md
docs/source/Objective_Functions/: Objective_Function.md
docs/source/Python_Developer_Guide/: Command_Structure.md  Create_and_list_Datasets.md  Errors.md  Help.md  Introduction.md  Preparing_Your_Data_and_Hyper_Parameters.md  Selecting_Compute_Resources.md  Setting_Up_Your_Environment.md  Submitting_and_Monitoring_a_Run.md  Working_with_Datasets.md  Working_with_Models.md
docs/source/QuEnc_Algorithm/: Example_Problem.md  Introduction.md  Output_Format.md  (+1 more)
notebooks/: README.md  Untitled.ipynb  basic_example.ipynb  custom_quantum_example.ipynb  cva_opt_example.ipynb  cva_opt_with_channels_example.ipynb  generic_sequential_ML_example.ipynb  quenc_example.ipynb  tetraopt_example.ipynb  tetraopt_example_using_comms_channel.ipynb  tetraopt_example_using_comms_channel_2.ipynb  tetraopt_example_using_communication_channels.ipynb  tetraopt_example_using_http_endpoint.ipynb  tq42_notebook_utils.py  ts_generic_example.ipynb  ts_hqlstm_example.ipynb  ts_hqmlp_example.ipynb  ts_lstm_example.ipynb  ts_mlp_example.ipynb
tq42/: __init__.py  __main__.py  algorithm.py  channel.py  client.py  compute.py  dataset.py  exception_handling.py  exceptions.py  experiment.py  experiment_run.py  model.py  organization.py  project.py
tq42/cli/: auth_group.py  cli_functions.py  completion.py  compute_group.py  dataset_group.py  entrypoint.py  environment_group.py  experiment_group.py  experiment_run_group.py  model_group.py  organization_group.py  project_dataset_group.py  project_group.py  project_model_group.py  tq42_all.py  tq42_help.py
tq42/cli/utils/: formatter.py  (+2 more)
tq42/exceptions/: __init__.py  authentication_error.py  experiment_run_cancel_error.py  invalid_argument_error.py  invalid_cli_input_error.py  no_default_error.py  no_matching_attribute_error.py  permission_denied_error.py  retries_exceeded_error.py  tq42_api_error.py  unauthenticated_error.py
tq42/functional_tests/: conftest.py  functional_test_config.py  test_channels.py  test_client.py  test_functional_cache_utils.py  test_functional_tq42_api.py  test_functional_tq42_api_dataset.py  test_polling_function.py  test_test_config.py
tq42/internal/: functionality.py
tq42/tests/: test_cache_utils.py  test_compute.py  test_config_environment.py  test_dataset.py  test_dirs.py  test_example.py  test_imports.py  test_package_version.py  test_tq42_api.py  test_tq42_error_handling.py  test_utils.py
tq42/utils/: constants.py  decorators.py  dirs.py  environment.py  environment_utils.py  exception_handling.py  exceptions.py  file_handling.py  misc.py  pretty_list.py  schema_registry.py  timers.py  token_manager.py  utils.py  utils_for_cache.py
(+65 files in other folders)
