[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
include = ["utils/text_files/*.txt", "utils/text_files/config.json", "tests/testdata/*.txt"]

[tool.poetry]
name = "tq42"
version = "0.5.44"
description = "tq42 sdk"
readme = "README.md"
authors = ["Terra Quantum AG"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
PyYAML = "^6.0.1"
tq42_grpc_client = "1.0.154"
pytest = "^7.4.4"
keyring = "^25.0.0"
tqdm = "^4.66.4"
validators = "^0.28.3"
pytest-asyncio = "^0.23.7"
bufbuild-reflect-grpc-python = {version = "^1.65.0.1.20240117202343+bf8f65e8876c", source = "buf"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "buf"
url = "https://buf.build/gen/python"
priority = "supplemental"

[tool.poetry.scripts]
tq42 = "tq42.__main__:main"

[tool.poetry.group.styles.dependencies]
black = "^23.12.1"
ruff = "^0.1.9"

[tool.ruff]
exclude = [
    "docs"
]
[tool.pytest.ini_options]
markers = [
    "poll: Also run polling tests"
]
