[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
include = ["utils/text_files/*.txt", "utils/text_files/config.json", "tests/testdata/*.txt"]

[tool.poetry]
name = "tq42"
version = "0.9.10"
description = "tq42 sdk"
readme = "README.md"
authors = ["Terra Quantum AG"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
PyYAML = "^6.0.1"
grpcio = "1.64.1"
tq42_grpc_client = "1.0.199"
pytest = "^7.4.4"
keyring = "^25.0.0"
tqdm = "^4.66.4"
validators = "^0.28.3"
pytest-asyncio = "^0.23.7"
click = "^8.1.7"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.scripts]
tq42 = "tq42.cli.entrypoint:cli"

[tool.poetry.group.styles.dependencies]
black = "^23.12.1"
ruff = "^0.1.9"

[tool.poetry.group.dev.dependencies]
optimizationtestfunctions = "^1.0.1"
numpy = [
    { version = "^1.26.4", python = ">3.11" },
    { version = "^1.24.4", python = "<=3.11" }
]
scipy = [
    { version = "^1.13.1", python = ">=3.9" },
    { version = "^1.10.1", python = "<3.9" }
]
pandas = [
    { version = "^2.2.3", python = ">=3.9" },
    { version = "^2.0.1", python = "<3.9" }
]


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinxcontrib-apidoc = "0.5.0"
renku-sphinx-theme = "0.4.0"
sphinx-rtd-theme = "1.3.0"
myst-parser = "^3.0.1"


[tool.ruff]
exclude = [
    "docs"
]

[tool.pytest]
asyncio_mode = "auto"

[tool.pytest.ini_options]
markers = [
    "poll: Also run polling tests"
]
